fix display on small devices

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,7 +21,11 @@ body {
   padding: 0em;
   margin: 0;
 }
-
+@media only screen and (max-width: 430px) {
+  :root {
+      --gap: 0.6em;
+  }
+}
 @media only screen and (max-width: 600px) {
   :root {
       --gap: 1em;
